// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ChatBubble from user with avatar as react element unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container memori-chat--bubble-from-user"
  >
    <div
      class="memori-chat--bubble memori-chat--user-bubble transition ease-in-out duration-300 opacity-0 scale-09 translate-x-30"
    >
      <div
        class="memori-expandable memori-chat--bubble-content"
      >
        <div
          class="memori-expandable--inner"
          style="max-height: 9999px;"
        >
          Proin libero ante, dignissim sit amet turpis a, pretium condimentum dolor.
        </div>
      </div>
    </div>
    <div
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x-15"
    >
      <span>
        USER
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble from user with avatar unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container memori-chat--bubble-from-user"
  >
    <div
      class="memori-chat--bubble memori-chat--user-bubble transition ease-in-out duration-300 opacity-0 scale-09 translate-x-30"
    >
      <div
        class="memori-expandable memori-chat--bubble-content"
      >
        <div
          class="memori-expandable--inner"
          style="max-height: 9999px;"
        >
          Proin libero ante, dignissim sit amet turpis a, pretium condimentum dolor.
        </div>
      </div>
    </div>
    <picture
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x-15"
    >
      <img
        alt="User"
        class="memori-chat--bubble-avatar-img"
        src="https://picsum.photos/200"
      />
    </picture>
  </div>
</div>
`;

exports[`renders ChatBubble from user with custom avatar unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container memori-chat--bubble-from-user"
  >
    <div
      class="memori-chat--bubble memori-chat--user-bubble transition ease-in-out duration-300 opacity-0 scale-09 translate-x-30"
    >
      <div
        class="memori-expandable memori-chat--bubble-content"
      >
        <div
          class="memori-expandable--inner"
          style="max-height: 9999px;"
        >
          Proin libero ante, dignissim sit amet turpis a, pretium condimentum dolor.
        </div>
      </div>
    </div>
    <picture
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x-15"
    >
      <img
        alt="User"
        class="memori-chat--bubble-avatar-img"
        src="https://picsum.photos/200"
      />
    </picture>
  </div>
</div>
`;

exports[`renders ChatBubble unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container"
  >
    <picture
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x--15"
      title="Memori"
    >
      <img
        alt="Memori"
        class="memori-chat--bubble-avatar-img"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <div
      class="memori-chat--bubble memori-chat--with-addon transition ease-in-out duration-300 opacity-0 scale-09 translate-x--30"
    >
      <div
        class="memori-chat--bubble-content"
      >
        Proin libero ante, dignissim sit amet turpis a, pretium condimentum dolor.
      </div>
      <div
        class="memori-chat--bubble-addon"
      >
        <button
          class="memori-button memori-button--ghost memori-button--circle memori-button--padded memori-button--icon-only memori-chat--bubble-action-icon"
          title="copy"
        >
          <span
            class="memori-button--icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble with complex markdown and math 1 unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container"
  >
    <picture
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x--15"
      title="Memori"
    >
      <img
        alt="Memori"
        class="memori-chat--bubble-avatar-img"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <div
      class="memori-chat--bubble memori-chat--with-addon transition ease-in-out duration-300 opacity-0 scale-09 translate-x--30"
    >
      <div
        class="memori-chat--bubble-content"
      >
        Per calcolare l'ipotenusa di un triangolo rettangolo, puoi usare il Teorema di Pitagora. Il teorema afferma che in un triangolo rettangolo, il quadrato dell'ipotenusa (la lato opposto all'angolo retto) è uguale alla somma dei quadrati degli altri due lati.
La formula è:
c=a2+b2c = \\sqrt{a^2 + b^2}c=a2+b2​
Dove:

ccc è l'ipotenusa.
aaa e bbb sono i due cateti del triangolo.

Passaggi per il Calcolo

Misura o identifica i cateti aaa e bbb:
I cateti sono i due lati che formano l'angolo retto.

Calcola i quadrati dei cateti:
Eleva al quadrato entrambe le misure dei cateti: a2a^2a2 e b2b^2b2.

Somma i quadrati dei cateti:
Somma i risultati ottenuti: a2+b2a^2 + b^2a2+b2.

Calcola la radice quadrata della somma:
Prendi la radice quadrata della somma per trovare l'ipotenusa: c=a2+b2c = \\sqrt{a^2 + b^2}c=a2+b2​.


Esempio di Calcolo
Supponiamo di avere un triangolo rettangolo con i cateti di lunghezza 3 cm e 4 cm.

Cateto aaa: 3 cm
Cateto bbb: 4 cm

Usiamo la formula:
c=a2+b2c = \\sqrt{a^2 + b^2}c=a2+b2​
c=(3 cm)2+(4 cm)2c = \\sqrt{(3 \\, \\text{cm})^2 + (4 \\, \\text{cm})^2}c=(3cm)2+(4cm)2​
c=9 cm2+16 cm2c = \\sqrt{9 \\, \\text{cm}^2 + 16 \\, \\text{cm}^2}c=9cm2+16cm2​
c=25 cm2c = \\sqrt{25 \\, \\text{cm}^2}c=25cm2​
c=5 cmc = 5 \\, \\text{cm}c=5cm
Quindi, l'ipotenusa del triangolo è di 5 cm.
      </div>
      <div
        class="memori-chat--bubble-addon"
      >
        <button
          class="memori-button memori-button--ghost memori-button--circle memori-button--padded memori-button--icon-only memori-chat--bubble-action-icon"
          title="copy"
        >
          <span
            class="memori-button--icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
          </span>
        </button>
        <button
          class="memori-button memori-button--ghost memori-button--circle memori-button--padded memori-button--icon-only memori-chat--bubble-action-icon"
          title="copyRawCode"
        >
          <span
            class="memori-button--icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 9.5 8 12l2 2.5"
              />
              <path
                d="m14 9.5 2 2.5-2 2.5"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble with complex markdown and math 2 unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container"
  >
    <picture
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x--15"
      title="Memori"
    >
      <img
        alt="Memori"
        class="memori-chat--bubble-avatar-img"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <div
      class="memori-chat--bubble memori-chat--with-addon transition ease-in-out duration-300 opacity-0 scale-09 translate-x--30"
    >
      <div
        class="memori-chat--bubble-content"
      >
        Per calcolare le resistenze dei materiali per le verifiche rispetto ad azioni antropiche e ambientali secondo la Specifica Tecnica ST-VAL4, si procede in questo modo:

Determinazione della resistenza dei materiali:
La resistenza dei materiali da utilizzare nelle verifiche accurate si determina a partire dalle indagini sull’opera. La caratterizzazione deve essere distinta per tutti i materiali presenti nell'opera, in accordo con la ST-PI. Le resistenze per verifiche rispetto ad azioni antropiche come i carichi da traffico e le azioni ambientali sono definite dalle LG20. Questo include la distinzione rispetto a quelle utilizzate per le azioni sismiche, come dettagliato dalle NTC18 e CIR19  .

Calcolo della resistenza:
Il valore della resistenza dei materiali fdf_dfd​ da utilizzare nelle verifiche per carichi gravitazionali si ottiene mediante la seguente espressione:
fd=min⁡(fmFCcdotγM,fkFC)f_d = \\min \\left( \\frac{f_m}{FC \\\\cdot \\gamma_M}, \\frac{f_k}{FC} \\right)fd​=min(FCcdotγM​fm​​,FCfk​​)
Dove:

fmf_mfm​ è il valor medio della resistenza valutato dai risultati delle prove effettuate sui campioni prelevati in situ;
fkf_kfk​ è la resistenza caratteristica calcolata sulla base dei risultati delle prove sui campioni prelevati in situ;
FCFCFC è il Fattore di Confidenza associato al Livello di Conoscenza raggiunto;
γM\\gamma_MγM​ è il fattore parziale di sicurezza del materiale   .


Caratterizzazione dei materiali:
I valori medi, caratteristici e di progetto delle resistenze a compressione e trazione per il calcestruzzo, e delle resistenze a snervamento per l’acciaio ordinario sono determinati a partire dai risultati delle prove. Specifiche espressioni e metodi sono forniti per diversi materiali nell'Appendice 13 della ST-VAL4  .

Stima della resistenza da prove non distruttive:
Per valutare le resistenze dei materiali, si possono anche utilizzare prove non distruttive come le prove SonReb per il calcestruzzo e le prove di durezza per l'acciaio ordinario e armonico. Formulazioni specifiche per queste prove si trovano in Appendice al §13.1 della ST-VAL4 .

Analisi dei risultati delle indagini:
Gli esiti delle prove devono essere attentamente analizzati per confermare le caratteristiche originarie o rilevare eventuali decadimenti del materiale. Questo processo include anche l'identificazione delle cause di dispersione significative nei risultati delle prove  .


Seguendo questi passaggi, si ottiene una stima accurata delle resistenze dei materiali che possono essere utilizzate per le verifiche di sicurezza rispetto ad azioni antropiche e ambientali.
      </div>
      <div
        class="memori-chat--bubble-addon"
      >
        <button
          class="memori-button memori-button--ghost memori-button--circle memori-button--padded memori-button--icon-only memori-chat--bubble-action-icon"
          title="copy"
        >
          <span
            class="memori-button--icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
          </span>
        </button>
        <button
          class="memori-button memori-button--ghost memori-button--circle memori-button--padded memori-button--icon-only memori-chat--bubble-action-icon"
          title="copyRawCode"
        >
          <span
            class="memori-button--icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 9.5 8 12l2 2.5"
              />
              <path
                d="m14 9.5 2 2.5-2 2.5"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble with complex markdown and math 3 unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container"
  >
    <picture
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x--15"
      title="Memori"
    >
      <img
        alt="Memori"
        class="memori-chat--bubble-avatar-img"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <div
      class="memori-chat--bubble memori-chat--with-addon transition ease-in-out duration-300 opacity-0 scale-09 translate-x--30"
    >
      <div
        class="memori-chat--bubble-content"
      >
        Ok. 
Per calcolare l'urto su barriere metalliche, il documento "Ponti, viadotti e cavalcavia - Specifica Tecnica per la redazione delle Verifiche Accurate di sicurezza di Livello 4 (ST-VAL4)" fornisce un metodo specifico. Ecco l'iter riassunto:

Determinazione del sistema di forze orizzontali: Partendo dal momento di plasticizzazione del montante (§5.1.3.10 delle NTC18). La forza orizzontale che plasticizza il montante può essere determinata con riferimento alla resistenza caratteristica degli elementi strutturali principali della barriera.

Quota di applicazione della forza: La forza orizzontale deve essere applicata ad una quota h, che è il minimo tra (altezza della barriera - 0,10 m) e 1,00 m.

Amplificazione delle forze orizzontali: Per il dimensionamento dell'impalcato, le forze orizzontali sono amplificate di un fattore di 1,50, e il coefficiente parziale di sicurezza per la combinazione di carico agli SLU per l’urto di veicolo in svio è assunto unitario.

Calcolo della massima azione tagliante: Alla base del montante (estradosso cordolo):
 $$
 F_{\\text{urto}} = \\frac{M_{\\text{pl}}}{h^*}
 $$
 Dove:

MplM_{\\text{pl}}Mpl​ è il momento plastico calcolato con la resistenza caratteristica.
h∗=h−hR−hCh^* = h - h_R - h_Ch∗=h−hR​−hC​
hhh è pari all’altezza della forza di urto sulla superficie di rotolamento (1.00 m), hBh_BhB​ è l’altezza della forza rispetto all’estradosso del cordolo, hCh_ChC​ è l’altezza del cordolo, e hRh_RhR​ è l’altezza dell’irrigidimento del nodo e della piastra di base.


Determinazione del momento trasferito all’estradosso del cordolo:
 $$
 M_{\\text{urto}} = F_{\\text{urto}} \\cdot h_B = M_{\\text{pl}} \\cdot \\left(1 + \\frac{h_R}{h^*}\\right)
 $$

Amplificazione per le incertezze: Il valore caratteristico è amplificato di un fattore parziale pari a 1,50 per tenere conto delle incertezze e possibili deformabilità della lamiera irrigidita.

Considerazione della plasticizzazione: Nel caso di barriere ordinarie, si considera la piena plasticizzazione di tre montanti consecutivi a seguito dell’urto, salvo diversa valutazione motivata.

Normative alternative: In assenza di informazioni, si può fare riferimento al valore normativo della forza d’urto di 100 kN (NTC18) da collocarsi a 100 mm sotto la sommità dell’elemento o 1,0 m sopra il livello del piano di marcia【4:0†source】【4:1†source】【4:4†source】【4:9†source】【4:5†source】.


Per ulteriori dettagli o chiarimenti, puoi consultare la sezione del documento ST-VAL4 o scrivere a anna.sganzerla@tecneautostrade.it.
      </div>
      <div
        class="memori-chat--bubble-addon"
      >
        <button
          class="memori-button memori-button--ghost memori-button--circle memori-button--padded memori-button--icon-only memori-chat--bubble-action-icon"
          title="copy"
        >
          <span
            class="memori-button--icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
          </span>
        </button>
        <button
          class="memori-button memori-button--ghost memori-button--circle memori-button--padded memori-button--icon-only memori-chat--bubble-action-icon"
          title="copyRawCode"
        >
          <span
            class="memori-button--icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 9.5 8 12l2 2.5"
              />
              <path
                d="m14 9.5 2 2.5-2 2.5"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble with complex markdown and math 4 unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container"
  >
    <picture
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x--15"
      title="Memori"
    >
      <img
        alt="Memori"
        class="memori-chat--bubble-avatar-img"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <div
      class="memori-chat--bubble memori-chat--with-addon transition ease-in-out duration-300 opacity-0 scale-09 translate-x--30"
    >
      <div
        class="memori-chat--bubble-content"
      >
        Per calcolare l'urto su barriere metalliche, è necessario considerare diversi fattori come la massa del veicolo, la velocità dell'impatto, l'angolo di impatto e le caratteristiche della barriera stessa. Di seguito è riportata una descrizione generale del processo di calcolo:

Determinazione dei parametri dell'urto:


Massa del veicolo (m): La massa del veicolo che colpisce la barriera.
Velocità dell'impatto (v): La velocità del veicolo al momento dell'impatto.
Angolo di impatto (θ): L'angolo con cui il veicolo colpisce la barriera.


Calcolo dell'energia cinetica:
 L'energia cinetica del veicolo al momento dell'impatto è data dalla formula:
 $$
 E_k = \\frac{1}{2} m v^2
 $$
 dove EkE_kEk​ è l'energia cinetica, mmm è la massa del veicolo e vvv è la velocità del veicolo.

Calcolo della forza d'impatto:
 La forza d'impatto può essere calcolata considerando la decelerazione del veicolo e il tempo di contatto con la barriera. Una formula semplificata per la forza d'impatto FFF è:
 $$
 F = \\frac{m \\Delta v}{\\Delta t}
 $$
 dove Δv\\Delta vΔv è la variazione di velocità (che può essere considerata uguale alla velocità iniziale (v) se il veicolo si ferma completamente), e Δt\\Delta tΔt è il tempo di contatto.

Considerazioni sulla barriera:
 Le barriere metalliche sono progettate per assorbire energia e ridurre la forza trasmessa ai veicoli e agli occupanti. La capacità di assorbimento dell'energia della barriera dipende dal materiale, dalla geometria e dalla costruzione della barriera stessa.

Normative e standard:
 È importante seguire le normative e gli standard specifici per la progettazione e il calcolo delle barriere di sicurezza. Questi possono variare a seconda del paese e dell'applicazione specifica (ad esempio, autostrade, ponti, ecc.).


Per calcoli più dettagliati e specifici, si consiglia di consultare le normative tecniche locali e di utilizzare software di simulazione specializzati che possono prendere in considerazione tutti i fattori rilevanti.
      </div>
      <div
        class="memori-chat--bubble-addon"
      >
        <button
          class="memori-button memori-button--ghost memori-button--circle memori-button--padded memori-button--icon-only memori-chat--bubble-action-icon"
          title="copy"
        >
          <span
            class="memori-button--icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
          </span>
        </button>
        <button
          class="memori-button memori-button--ghost memori-button--circle memori-button--padded memori-button--icon-only memori-chat--bubble-action-icon"
          title="copyRawCode"
        >
          <span
            class="memori-button--icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 9.5 8 12l2 2.5"
              />
              <path
                d="m14 9.5 2 2.5-2 2.5"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble with complex markdown and math 5 unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container"
  >
    <picture
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x--15"
      title="Memori"
    >
      <img
        alt="Memori"
        class="memori-chat--bubble-avatar-img"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <div
      class="memori-chat--bubble memori-chat--with-addon transition ease-in-out duration-300 opacity-0 scale-09 translate-x--30"
    >
      <div
        class="memori-chat--bubble-content"
      >
        Per calcolare l'ipotenusa di un triangolo rettangolo, puoi utilizzare il teorema di Pitagora. La formula è:
c=sqrta2+b2c = \\\\sqrt{a^2 + b^2}c=sqrta2+b2
Dove:

\\( c \\) è l'ipotenusa,
\\( a \\) e \\( b \\) sono i due cateti del triangolo.

Ad esempio, se hai un triangolo con i cateti di lunghezza 3 e 4, l'ipotenusa sarà:
c=sqrt32+42=sqrt9+16=sqrt25=5c = \\\\sqrt{3^2 + 4^2} = \\\\sqrt{9 + 16} = \\\\sqrt{25} = 5c=sqrt32+42=sqrt9+16=sqrt25=5
Se hai altre domande o dubbi, sono qui per aiutarti!
      </div>
      <div
        class="memori-chat--bubble-addon"
      >
        <button
          class="memori-button memori-button--ghost memori-button--circle memori-button--padded memori-button--icon-only memori-chat--bubble-action-icon"
          title="copy"
        >
          <span
            class="memori-button--icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
          </span>
        </button>
        <button
          class="memori-button memori-button--ghost memori-button--circle memori-button--padded memori-button--icon-only memori-chat--bubble-action-icon"
          title="copyRawCode"
        >
          <span
            class="memori-button--icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 9.5 8 12l2 2.5"
              />
              <path
                d="m14 9.5 2 2.5-2 2.5"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble with complex markdown and math but disabled unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container"
  >
    <picture
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x--15"
      title="Memori"
    >
      <img
        alt="Memori"
        class="memori-chat--bubble-avatar-img"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <div
      class="memori-chat--bubble memori-chat--with-addon transition ease-in-out duration-300 opacity-0 scale-09 translate-x--30"
    >
      <div
        class="memori-chat--bubble-content"
      >
        Per calcolare l'ipotenusa di un triangolo rettangolo, puoi usare il Teorema di Pitagora. Il teorema afferma che in un triangolo rettangolo, il quadrato dell'ipotenusa (la lato opposto all'angolo retto) è uguale alla somma dei quadrati degli altri due lati.
La formula è:
[ c = \\sqrt{a^2 + b^2} ]
Dove:

$c$ è l'ipotenusa.
$a$ e $ b $ sono i due cateti del triangolo.

Passaggi per il Calcolo

Misura o identifica i cateti $ a $ e $ b $:
I cateti sono i due lati che formano l'angolo retto.

Calcola i quadrati dei cateti:
Eleva al quadrato entrambe le misure dei cateti: $ a^2 $ e $ b^2 $.

Somma i quadrati dei cateti:
Somma i risultati ottenuti: $ a^2 + b^2 $.

Calcola la radice quadrata della somma:
Prendi la radice quadrata della somma per trovare l'ipotenusa: $ c = \\sqrt{a^2 + b^2} $.


Esempio di Calcolo
Supponiamo di avere un triangolo rettangolo con i cateti di lunghezza 3 cm e 4 cm.

Cateto $ a $: 3 cm
Cateto $ b $: 4 cm

Usiamo la formula:
[ c = \\sqrt{a^2 + b^2} ]
[ c = \\sqrt{(3 , \\text{cm})^2 + (4 , \\text{cm})^2} ]
[ c = \\sqrt{9 , \\text{cm}^2 + 16 , \\text{cm}^2} ]
[ c = \\sqrt{25 , \\text{cm}^2} ]
[ c = 5 , \\text{cm} ]
Quindi, l'ipotenusa del triangolo è di 5 cm.
      </div>
      <div
        class="memori-chat--bubble-addon"
      >
        <button
          class="memori-button memori-button--ghost memori-button--circle memori-button--padded memori-button--icon-only memori-chat--bubble-action-icon"
          title="copy"
        >
          <span
            class="memori-button--icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
          </span>
        </button>
        <button
          class="memori-button memori-button--ghost memori-button--circle memori-button--padded memori-button--icon-only memori-chat--bubble-action-icon"
          title="copyRawCode"
        >
          <span
            class="memori-button--icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 9.5 8 12l2 2.5"
              />
              <path
                d="m14 9.5 2 2.5-2 2.5"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble with copy disabled unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container"
  >
    <picture
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x--15"
      title="Memori"
    >
      <img
        alt="Memori"
        class="memori-chat--bubble-avatar-img"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <div
      class="memori-chat--bubble transition ease-in-out duration-300 opacity-0 scale-09 translate-x--30"
    >
      <div
        class="memori-chat--bubble-content"
      >
        Proin libero ante, dignissim sit amet turpis a, pretium condimentum dolor.
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble with initial msg unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-initial"
  />
  <div
    class="memori-chat--bubble-container"
  >
    <picture
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x--15"
      title="Memori"
    >
      <img
        alt="Memori"
        class="memori-chat--bubble-avatar-img"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <div
      class="memori-chat--bubble memori-chat--with-addon transition ease-in-out duration-300 opacity-0 scale-09 translate-x--30"
    >
      <div
        class="memori-chat--bubble-content"
      >
        Proin libero ante, dignissim sit amet turpis a, pretium condimentum dolor.
      </div>
      <div
        class="memori-chat--bubble-addon"
      >
        <button
          class="memori-button memori-button--ghost memori-button--circle memori-button--padded memori-button--icon-only memori-chat--bubble-action-icon"
          title="copy"
        >
          <span
            class="memori-button--icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble with markdown and breakline unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container"
  >
    <picture
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x--15"
      title="Memori"
    >
      <img
        alt="Memori"
        class="memori-chat--bubble-avatar-img"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <div
      class="memori-chat--bubble memori-chat--with-addon transition ease-in-out duration-300 opacity-0 scale-09 translate-x--30"
    >
      <div
        class="memori-chat--bubble-content"
      >
        Per l'avvio di una progettualità è necessario fornire le seguenti informazioni:

Natura dell'esigenza progettuale e obiettivi
Descrizione del progetto
Prima identificazione delle risorse necessarie
Costi stimati
Benefici attesi
Rischi identificati.

      </div>
      <div
        class="memori-chat--bubble-addon"
      >
        <button
          class="memori-button memori-button--ghost memori-button--circle memori-button--padded memori-button--icon-only memori-chat--bubble-action-icon"
          title="copy"
        >
          <span
            class="memori-button--icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
          </span>
        </button>
        <button
          class="memori-button memori-button--ghost memori-button--circle memori-button--padded memori-button--icon-only memori-chat--bubble-action-icon"
          title="copyRawCode"
        >
          <span
            class="memori-button--icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 9.5 8 12l2 2.5"
              />
              <path
                d="m14 9.5 2 2.5-2 2.5"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble with markdown code unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container"
  >
    <picture
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x--15"
      title="Memori"
    >
      <img
        alt="Memori"
        class="memori-chat--bubble-avatar-img"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <div
      class="memori-chat--bubble memori-chat--with-addon transition ease-in-out duration-300 opacity-0 scale-09 translate-x--30"
    >
      <div
        class="memori-chat--bubble-content"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
titolo
Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      </div>
      <div
        class="memori-chat--bubble-addon"
      >
        <button
          class="memori-button memori-button--ghost memori-button--circle memori-button--padded memori-button--icon-only memori-chat--bubble-action-icon"
          title="copy"
        >
          <span
            class="memori-button--icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
          </span>
        </button>
        <button
          class="memori-button memori-button--ghost memori-button--circle memori-button--padded memori-button--icon-only memori-chat--bubble-action-icon"
          title="copyRawCode"
        >
          <span
            class="memori-button--icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 9.5 8 12l2 2.5"
              />
              <path
                d="m14 9.5 2 2.5-2 2.5"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble with markdown table unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container"
  >
    <picture
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x--15"
      title="Memori"
    >
      <img
        alt="Memori"
        class="memori-chat--bubble-avatar-img"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <div
      class="memori-chat--bubble memori-chat--with-addon transition ease-in-out duration-300 opacity-0 scale-09 translate-x--30"
    >
      <div
        class="memori-chat--bubble-content"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
Header 1
Header 2
Header 3
Cell 1
Cell 2
Cell 3
Cell 4
Cell 5
Cell 6
Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      </div>
      <div
        class="memori-chat--bubble-addon"
      >
        <button
          class="memori-button memori-button--ghost memori-button--circle memori-button--padded memori-button--icon-only memori-chat--bubble-action-icon"
          title="copy"
        >
          <span
            class="memori-button--icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
          </span>
        </button>
        <button
          class="memori-button memori-button--ghost memori-button--circle memori-button--padded memori-button--icon-only memori-chat--bubble-action-icon"
          title="copyRawCode"
        >
          <span
            class="memori-button--icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 9.5 8 12l2 2.5"
              />
              <path
                d="m14 9.5 2 2.5-2 2.5"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble with markdown unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container"
  >
    <picture
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x--15"
      title="Memori"
    >
      <img
        alt="Memori"
        class="memori-chat--bubble-avatar-img"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <div
      class="memori-chat--bubble memori-chat--with-addon transition ease-in-out duration-300 opacity-0 scale-09 translate-x--30"
    >
      <div
        class="memori-chat--bubble-content"
      >
        Test
Ecco tutte le possibili personalizzazioni che puoi applicare:

Colletto:

Girocollo

Scollo a V

Manica:

Manica Lunga

Manica Corta

Taglia:

XS

S

M

L

XL

XXL

3XL

Posizione Stampa:

Fronte Petto

Retro Schiena

Fronte DX

Fronte SX

Generazione Immagine:

Prompt generazione immagine


Seleziona le personalizzazioni che desideri applicare.
Vedi altro
      </div>
      <div
        class="memori-chat--bubble-addon"
      >
        <button
          class="memori-button memori-button--ghost memori-button--circle memori-button--padded memori-button--icon-only memori-chat--bubble-action-icon"
          title="copy"
        >
          <span
            class="memori-button--icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
          </span>
        </button>
        <button
          class="memori-button memori-button--ghost memori-button--circle memori-button--padded memori-button--icon-only memori-chat--bubble-action-icon"
          title="copyRawCode"
        >
          <span
            class="memori-button--icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 9.5 8 12l2 2.5"
              />
              <path
                d="m14 9.5 2 2.5-2 2.5"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble with msg from BoE expert unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container memori-chat--bubble-from-user memori-chat--with-addon"
  >
    <div
      class="memori-chat--bubble memori-chat--user-bubble memori-chat--with-addon memori-chat--ai-generated transition ease-in-out duration-300 opacity-0 scale-09 translate-x-30"
    >
      <div
        class="memori-expandable memori-chat--bubble-content"
      >
        <div
          class="memori-expandable--inner"
          style="max-height: 9999px;"
        >
          Proin libero ante, dignissim sit amet turpis a, pretium condimentum dolor.
        </div>
      </div>
      <div
        class="memori-chat--bubble-addon"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left memori-chat--bubble-action-icon memori-chat--bubble-action-icon--ai"
        >
          <div
            class="memori-tooltip--content"
          >
            generatedByAI
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span>
              <svg
                aria-label="generatedByAI"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x-15"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        role="img"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M858.5 763.6a374 374 0 0 0-80.6-119.5 375.63 375.63 0 0 0-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 0 0-80.6 119.5A371.7 371.7 0 0 0 136 901.8a8 8 0 0 0 8 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 0 0 8-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble with msg generated by AI unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container memori-chat--bubble-from-user memori-chat--with-addon"
  >
    <div
      class="memori-chat--bubble memori-chat--user-bubble memori-chat--with-addon memori-chat--ai-generated transition ease-in-out duration-300 opacity-0 scale-09 translate-x-30"
    >
      <div
        class="memori-expandable memori-chat--bubble-content"
      >
        <div
          class="memori-expandable--inner"
          style="max-height: 9999px;"
        >
          Proin libero ante, dignissim sit amet turpis a, pretium condimentum dolor.
        </div>
      </div>
      <div
        class="memori-chat--bubble-addon"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left memori-chat--bubble-action-icon memori-chat--bubble-action-icon--ai"
        >
          <div
            class="memori-tooltip--content"
          >
            generatedByAI
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span>
              <svg
                aria-label="generatedByAI"
                fill="none"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-rule="evenodd"
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 4a4 4 0 014-4h16a4 4 0 014 4v16a4 4 0 01-4 4H4a4 4 0 01-4-4zm4-2.4A2.4 2.4 0 001.6 4v16A2.4 2.4 0 004 22.4h16a2.4 2.4 0 002.4-2.4V4A2.4 2.4 0 0020 1.6z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M9.715 8.442a.798.798 0 00-1.43 0l-3.2 6.4a.799.799 0 101.431.716l.579-1.158h3.811l.578 1.158a.8.8 0 001.431-.716zm.391 4.358L9 10.589 7.894 12.8z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M17 8c.552 0 1 .358 1 .8v6.4c0 .442-.448.8-1 .8s-1-.358-1-.8V8.8c0-.442.448-.8 1-.8z"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x-15"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        role="img"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M858.5 763.6a374 374 0 0 0-80.6-119.5 375.63 375.63 0 0 0-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 0 0-80.6 119.5A371.7 371.7 0 0 0 136 901.8a8 8 0 0 0 8 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 0 0 8-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble with translation and original unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container"
  >
    <picture
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x--15"
      title="Memori"
    >
      <img
        alt="Memori"
        class="memori-chat--bubble-avatar-img"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <div
      class="memori-chat--bubble memori-chat--with-addon transition ease-in-out duration-300 opacity-0 scale-09 translate-x--30"
    >
      <div
        class="memori-chat--bubble-content"
      >
        Ciao, questo è un testo tradotto in modo che tu possa parlarmi in diverse lingue
      </div>
      <div
        class="memori-chat--bubble-addon"
      >
        <button
          class="memori-button memori-button--ghost memori-button--circle memori-button--padded memori-button--icon-only memori-chat--bubble-action-icon"
          title="copy"
        >
          <span
            class="memori-button--icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
          </span>
        </button>
        <button
          class="memori-button memori-button--ghost memori-button--circle memori-button--padded memori-button--icon-only memori-chat--bubble-action-icon"
          title="copyRawCode"
        >
          <span
            class="memori-button--icon"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 9.5 8 12l2 2.5"
              />
              <path
                d="m14 9.5 2 2.5-2 2.5"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
            </svg>
          </span>
        </button>
        <div
          class="memori-tooltip memori-tooltip--align-left memori-chat--bubble-action-icon memori-chat--bubble-action-icon--ai"
        >
          <div
            class="memori-tooltip--content"
          >
            Original text: Hello, this is a translated text so you can talk to me in different languages
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span>
              <svg
                aria-hidden="true"
                focusable="false"
                role="img"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M140 188h584v164h76V144c0-17.7-14.3-32-32-32H96c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h544v-76H140V188z"
                />
                <path
                  d="M414.3 256h-60.6c-3.4 0-6.4 2.2-7.6 5.4L219 629.4c-.3.8-.4 1.7-.4 2.6 0 4.4 3.6 8 8 8h55.1c3.4 0 6.4-2.2 7.6-5.4L322 540h196.2L422 261.4c-1.3-3.2-4.3-5.4-7.7-5.4zm12.4 228h-85.5L384 360.2 426.7 484zM936 528H800v-93c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v93H592c-13.3 0-24 10.7-24 24v176c0 13.3 10.7 24 24 24h136v152c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V752h136c13.3 0 24-10.7 24-24V552c0-13.3-10.7-24-24-24zM728 680h-88v-80h88v80zm160 0h-88v-80h88v80z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ChatBubble with user msg unchanged 1`] = `
<div>
  <div
    class="memori-chat--bubble-container memori-chat--bubble-from-user"
  >
    <div
      class="memori-chat--bubble memori-chat--user-bubble transition ease-in-out duration-300 opacity-0 scale-09 translate-x-30"
    >
      <div
        class="memori-expandable memori-chat--bubble-content"
      >
        <div
          class="memori-expandable--inner"
          style="max-height: 9999px;"
        >
          Proin libero ante, dignissim sit amet turpis a, pretium condimentum dolor.
        </div>
      </div>
    </div>
    <div
      class="memori-chat--bubble-avatar transition ease-in-out duration-300 opacity-0 scale-075 translate-x-15"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        role="img"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M858.5 763.6a374 374 0 0 0-80.6-119.5 375.63 375.63 0 0 0-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 0 0-80.6 119.5A371.7 371.7 0 0 0 136 901.8a8 8 0 0 0 8 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 0 0 8-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
        />
      </svg>
    </div>
  </div>
</div>
`;
